        Options".
    
    o   merge() with multiple and differently-named match columns
        failed. (PR#1510)

    o   NAs in right-justified unquoted matrices were being mis-aligned.
	This mainly affected printing data frames.

    o	predict.*bSpline() bugs extrapolating for deriv >= 1 (PR#1473),
        and predict.[bn]s bug e.g. for bs(x), reported by Ch.Sangiorgio.

    o   qr.X was failing in n < p.  Fixed, but only in the case when
	pivoting does not occur. (PR#1519)

    o   xx[, 1:3] was returning a list if xx had only one row, even
	though xx[1, 1:3] was a data frame. (PR#1530)

    o   nls() was reporting incorrectly the number of iterations if the
	maximum was reached.



		CHANGES IN R VERSION 1.5.0


USER-VISIBLE CHANGES

    o	XDR support is now guaranteed to be available, so the default
	save format will always be XDR binary files, and it is safe to
	distribute data in that format.  (We are unaware of any
	platform that did not support XDR in recent versions of R.)

	gzfile() is guaranteed to be available, so the preferred
	method to distribute sizeable data objects is now via
	save(compress = TRUE).

    o	pie() replaces piechart() and defaults to using pastel colours.

    o	formatC has new arguments (see below) and formatC(*, d = <dig>)
	is no longer valid and must be written as formatC(*, digits = <dig>).

    o	Missingness of character strings is treated much more
	consistently, and the character string "NA" can be used as a
	non-missing value.

    o   summary.factor() now uses a stable sort, so the output will
	change where there are ties in the frequencies.


NEW FEATURES

    o   Changes in handling missing character strings:

        -  "NA" is no longer automatically coerced to a missing value
	   for a character string.  Use as.character(NA) where a missing
	   value is required, and test via is.na(x) not x == "NA".
	   String "NA" is still converted to missing by scan() and