@@ -55,7 +55,7 @@ BUG FIXES
     o	predict.*bSpline() bugs extrapolating for deriv >= 1 (PR#1473),
         and predict.[bn]s bug e.g. for bs(x), reported by Ch.Sangiorgio.
 
-    o   qr.X was failing in n < p.  Fixed, but only in the case when
+    o   qr.X was failing if n < p.  Fixed, but only in the case when
 	pivoting does not occur. (PR#1519)
 
     o   xx[, 1:3] was returning a list if xx had only one row, even
@@ -64,6 +64,8 @@ BUG FIXES
     o   nls() was reporting incorrectly the number of iterations if the
 	maximum was reached.
 
+    o   rebind.data.frame() was coercing logical columns to factors.
+	(PR#1536)
 
 
 		CHANGES IN R VERSION 1.5.0
